# NT_el3vate

./: .gitignore  LICENSE  README.md
NT_el3vate/: CMakeLists.txt  NT_el3vate.sln  NT_el3vate.vcxproj  NT_el3vate.vcxproj.filters  main.cpp  rw_primitive.cpp  rw_primitive.h  windows_helper_functions.h
NT_el3vate/src/: main.cpp  rw_primitive.cpp  rw_primitive.h  windows_helper_functions.cpp  windows_helper_functions.h  windows_struct.h
